[gd_scene load_steps=9 format=3 uid="uid://crujb11n13hqm"]

[ext_resource type="Script" path="res://scenes/UI/MainMenu.gd" id="1_cj54g"]
[ext_resource type="Texture2D" uid="uid://d3euu7qovuepg" path="res://Assets/Sprites/background 1/Background.png" id="2_w36ut"]
[ext_resource type="Texture2D" uid="uid://dpgbnrvfgsfak" path="res://Assets/Sprites/GUI/5 Logo/Logo.png" id="3_4bhpr"]
[ext_resource type="Texture2D" uid="uid://b6ky1xjx1y1lo" path="res://Assets/Sprites/GUI/6 Buttons/1/1.png" id="3_72lav"]
[ext_resource type="Texture2D" uid="uid://bwu5pga7q3gow" path="res://Assets/Sprites/GUI/6 Buttons/1/2.png" id="4_3oqo2"]
[ext_resource type="Texture2D" uid="uid://3t2m2c2gu3yp" path="res://Assets/Sprites/GUI/6 Buttons/1/3.png" id="5_8r8ri"]
[ext_resource type="Texture2D" uid="uid://o0ckj3vtqngg" path="res://Assets/Sprites/GUI/1 Frames/Frame_02.png" id="7_e3xtb"]

[sub_resource type="LabelSettings" id="LabelSettings_24ypm"]
font_size = 48
font_color = Color(0.94902, 0.882353, 0.65098, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 0.654902)
shadow_size = 8
shadow_color = Color(0, 0, 0, 0.392157)
shadow_offset = Vector2(2, 2)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cj54g")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_w36ut")
expand_mode = 1
stretch_mode = 6

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="TitlePanel" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer/TitlePanel"]
layout_mode = 2
texture = ExtResource("7_e3xtb")
expand_mode = 1

[node name="TitleMargin" type="MarginContainer" parent="CenterContainer/VBoxContainer/TitlePanel"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="TitleContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/TitlePanel/TitleMargin"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="GameLogo" type="TextureRect" parent="CenterContainer/VBoxContainer/TitlePanel/TitleMargin/TitleContainer"]
custom_minimum_size = Vector2(300, 150)
layout_mode = 2
texture = ExtResource("3_4bhpr")
expand_mode = 1
stretch_mode = 5

[node name="GameTitle" type="Label" parent="CenterContainer/VBoxContainer/TitlePanel/TitleMargin/TitleContainer"]
layout_mode = 2
text = "MIGHT"
label_settings = SubResource("LabelSettings_24ypm")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="PlayButton" type="TextureButton" parent="CenterContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_72lav")
texture_pressed = ExtResource("4_3oqo2")
texture_hover = ExtResource("5_8r8ri")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/Buttons/PlayButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.921569, 0.886275, 0.611765, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.498039)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 20
text = "Play"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsButton" type="TextureButton" parent="CenterContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_72lav")
texture_pressed = ExtResource("4_3oqo2")
texture_hover = ExtResource("5_8r8ri")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/Buttons/OptionsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.921569, 0.886275, 0.611765, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.498039)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 20
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CreditsButton" type="TextureButton" parent="CenterContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_72lav")
texture_pressed = ExtResource("4_3oqo2")
texture_hover = ExtResource("5_8r8ri")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/Buttons/CreditsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.921569, 0.886275, 0.611765, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.498039)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 20
text = "Credits"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitButton" type="TextureButton" parent="CenterContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_72lav")
texture_pressed = ExtResource("4_3oqo2")
texture_hover = ExtResource("5_8r8ri")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/Buttons/ExitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.921569, 0.886275, 0.611765, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.498039)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 20
text = "Exit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -26.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.921569, 0.886275, 0.611765, 0.701961)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.498039)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 12
text = "v0.1.0"
horizontal_alignment = 2
vertical_alignment = 2

[connection signal="pressed" from="CenterContainer/VBoxContainer/Buttons/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Buttons/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Buttons/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Buttons/ExitButton" to="." method="_on_exit_button_pressed"] 